Functional API, Swagger not finished
